# OmniAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  README_CN.md  USAGE.md  comparative_architecture_analysis.md  config.example.json  config.json  config.test.json  config.test.json.template  run_a2a_server.sh  test.sh  test_agent_card.sh  test_model_card.sh  validate_agent_card.py
.claude/specs/documentation-fix/: REPAIR_SUMMARY.md  audit-report.md  design.md  inconsistency-mapping.md  requirements.md  tasks.md  validate-examples.sh
.github/workflows/: ci.yml  docker-publish.yml
docs/: PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  USER_GUIDE.md  architecture_comparison.md  current_architecture.md  enhanced_architecture.md  ideal_architecture.md
examples/: claude_usage.rs  llm_usage.rs
scripts/: init.sh
src/: agent.rs  app.rs  config.rs  lib.rs  main.rs
src/a2a/: client.rs  protocol.rs
src/agent/: builder.rs  state.rs
src/core/: mod.rs
src/integrations/: mod.rs
src/llm/: manager.rs  mod.rs
src/mcp/: client.rs  manager.rs  protocol.rs
src/protocol/: agent_card.rs  manifest.rs  message.rs  mod.rs
src/server/: mod.rs
src/services/: mod.rs
src/ui/: mod.rs
tests/: agent_card_server_test.rs  agent_card_test.rs  claude_integration_test.rs  end_to_end_test.rs  google_integration_test.rs  integration_test.rs  integration_tests.rs  mock_servers.rs
tests/integration_tests/: agent_integration.rs  api_tests.rs  api_with_mock_tests.rs  conversation_buffer_tests.rs  llm_manager_tests.rs
(+62 files in other folders)
