[package]
name = "omni-agent"
version = "0.1.0"
edition = "2021"
authors = ["Claude <noreply@anthropic.com>"]
description = "A2A + MCP Agent implementation in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.20"
url = "2.0"
futures = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "omni-agent"
path = "src/main.rs"

[lib]
name = "omni_agent"
path = "src/lib.rs"
